--- a/encryption.html
+++ b/encryption.html
@@ -3,11 +3,34 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Encryption</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Encryption</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <h4>This page is about encryption</h4>
+    <p>Encryption is the process of scrambling data using a key into an unreadable format called ciphertext</p><br>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Pros</th>
+            <th>Cons</th>
+        </tr>
+        <tr>
+            <td>Symmetric Encryption</td>
+            <td>The same key is used to both encrypt and decrypt</td>
+            <td>It is easier to set up</td>
+            <td>Far less secure</td>
+        </tr>
+        <tr>
+            <td>Asymmetric Encryption</td>
+            <td>A private key is used held by the receiever to decrypt and there is a separate public key used to encrypt</td>
+            <td>More secure and can be used for digital signatures</td>
+            <td>More difficult to implement</td>
+        </tr>
+    </table>
+    <img src=""><br><br>
   </body>
 </html>
