added correct image address

--- a/encryption.html
+++ b/encryption.html
@@ -31,6 +31,6 @@
             <td>More difficult to implement</td>
         </tr>
     </table>
-    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg"><br><br>
+    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true"><br><br>
   </body>
 </html>
