--- a/Medical.html
+++ b/Medical.html
@@ -3,11 +3,39 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Medical Computing Uses</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
+  <style>
+    .container {
+        display: flex;
+        align-items: left;
+        justify-content: center
+    }
+    img {
+    max-width: 100%;
+    max-height:100%;
+    }
+
+    .text {
+    font-size: 20px;
+    padding-left: 10px;
+    }
+  </style>
   <body>
-    <h1>Hello, world!</h1>
+
+    <h1>Uses of Computing in the Medical Field</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <h3>There are many uses for computers in the medical field</h3>
+    <div class="container">
+        <div class="image">
+            <img src="https://miro.medium.com/v2/resize:fit:1400/1*Uk-v6ex--tMYiVf9ZNeBpA.jpeg"width="600" 
+            /><br><br>
+        </div>
+        <div class="text">
+          <p>Virtual reality can be used for 3D visualisation of the human body</p>
+        </div>
+      </div>
+    <p></p>
+</body>
 </html>
