--- a/encryption.html
+++ b/encryption.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" type="text/css" href="https://progblackgroup/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Encryption</title>
