--- a/Computing_page.html
+++ b/Computing_page.html
@@ -10,5 +10,6 @@
     <h2>Social</h2>
     <h2>Economy</h2>
     <h3>Environmental</h3>
+    <p>The Author of this page is Lily</p>
   </body>
 </html>
