--- a/Medical.html
+++ b/Medical.html
@@ -25,6 +25,7 @@
   <body>
 
     <h1>Uses of Computing in the Medical Field</h1>
+    <p>The author of this page is Eila</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <h3>There are many uses for computers in the medical field</h3>
     <div class="container">
