Added the author's name

--- a/encryption.html
+++ b/encryption.html
@@ -33,5 +33,6 @@
         </tr>
     </table>
     <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true"><br><br>
+    <p>"The author of this page is Hannah"</p>
   </body>
 </html>
