Added info to medical page

--- a/Medical.html
+++ b/Medical.html
@@ -18,7 +18,7 @@
     }
 
     .text {
-    font-size: 20px;
+    font-size: 15px;
     padding-left: 10px;
     }
   </style>
@@ -34,7 +34,8 @@
             /><br><br>
         </div>
         <div class="text">
-          <p>Virtual reality can be used for 3D visualisation of the human body</p>
+          <h5>Virtual reality can be used for 3D visualisation of the human body</h5>
+          <p>Doctors can view the body and learn in a "hands on" way</p>
         </div>
       </div>
     <p></p>
