--- a/index_page.html
+++ b/index_page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Index Page</title>
@@ -10,11 +10,11 @@
   <body>
     <h1>Index</h1>
     <p>Encryption page:</p>
-    <a href="https://github.com/code2867/progblackgroup/blob/main/encryption.html">Click Here!</a><br><br><br><br>
+    <a href="encryption.html">Click Here!</a><br><br><br><br>
     <p>Medical:</p>
-    <a href="https://github.com/code2867/progblackgroup/blob/main/Medical.html">Click Here!</a><br><br><br><br>
+    <a href="Medical.html">Click Here!</a><br><br><br><br>
     <p>Jobs in Computing:</p>
-    <a href="https://github.com/code2867/progblackgroup/blob/main/Computing_page.html">Click Here!</a><br><br><br><br>
+    <a href="Computing_page.html">Click Here!</a><br><br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
