Added the styling

--- a/Computing_page.html
+++ b/Computing_page.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
@@ -11,5 +12,6 @@
     <h2>Economy</h2>
     <h3>Environmental</h3>
     <p>The Author of this page is Lily</p>
+
   </body>
 </html>
