added nav links

--- a/Computing_page.html
+++ b/Computing_page.html
@@ -12,6 +12,9 @@
     <h2>Economy</h2>
     <h3>Environmental</h3>
     <p>The Author of this page is Lily</p>
-
+    <p>Encryption page:</p>
+    <a href="encryption.html">Click Here!</a><br><br><br><br>
+    <p>Medical:</p>
+    <a href="Medical.html">Click Here!</a><br><br><br><br>
   </body>
 </html>
