--- a/Medical.html
+++ b/Medical.html
@@ -38,5 +38,9 @@
         </div>
       </div>
     <p></p>
+    <p>Encryption page:</p>
+    <a href="encryption.html">Click Here!</a><br><br><br><br>
+    <p>Jobs in Computing:</p>
+    <a href="Computing_page.html">Click Here!</a><br><br><br><br>
 </body>
 </html>
