--- a/encryption.html
+++ b/encryption.html
@@ -34,5 +34,9 @@
     </table>
     <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true"><br><br>
     <p>"The author of this page is Hannah"</p>
+    <p>Medical:</p>
+    <a href="Medical.html">Click Here!</a><br><br><br><br>
+    <p>Jobs in Computing:</p>
+    <a href="Computing_page.html">Click Here!</a><br><br><br><br>
   </body>
 </html>
