--- a/encryption.html
+++ b/encryption.html
@@ -8,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Encryption</h1>
+    <h1 class="centre">Encryption</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <h4>This page is about encryption</h4>
-    <p>Encryption is the process of scrambling data using a key into an unreadable format called ciphertext</p><br>
+    <h4 class="centre">This page is about encryption</h4>
+    <h6 class="centre">Encryption is the process of scrambling data using a key into an unreadable format called ciphertext.</h6>
+    <p class="centre">The author of this page is Hannah.</p><br>
+
     <table>
         <tr>
             <th>Name</th>
@@ -32,8 +34,7 @@
             <td>More difficult to implement</td>
         </tr>
     </table>
-    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true"><br><br>
-    <p>"The author of this page is Hannah"</p>
+    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true" class="centre"><br><br>
     <p>Medical:</p>
     <a href="Medical.html">Click Here!</a><br><br><br><br>
     <p>Jobs in Computing:</p>
