--- a/encryption.html
+++ b/encryption.html
@@ -11,7 +11,7 @@
     <h1 class="centre">Encryption</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <h4 class="centre">This page is about encryption</h4>
-    <h6 class="centre">Encryption is the process of scrambling data using a key into an unreadable format called ciphertext.</h6>
+    <h6 class="centre">Encryption is the process of scrambling data using a key into an unreadable format called ciphertext so that, if intercepted, it cannot be understood.</h6>
     <p class="centre">The author of this page is Hannah.</p><br>
 
     <table>
