--- a/Medical.html
+++ b/Medical.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Medical Computing Uses</title>
@@ -29,7 +30,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <h3>There are many uses for computers in the medical field</h3>
     <div class="container">
-        <div class="image">
+        <div class="img1">
             <img src="https://miro.medium.com/v2/resize:fit:1400/1*Uk-v6ex--tMYiVf9ZNeBpA.jpeg"width="300" 
             /><br><br>
         </div>
