--- a/encryption.html
+++ b/encryption.html
@@ -34,7 +34,7 @@
             <td>More difficult to implement</td>
         </tr>
     </table>
-    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true" class="centre"><br><br>
+    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true"width="500"/><br><br>
     <p>Medical:</p>
     <a href="Medical.html">Click Here!</a><br><br><br><br>
     <p>Jobs in Computing:</p>
