added styling and changed nav page

--- a/encryption.html
+++ b/encryption.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <style>
+
+    </style>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,27 +17,27 @@
     <h6 class="centre">Encryption is the process of scrambling data using a key into an unreadable format called ciphertext so that, if intercepted, it cannot be understood.</h6>
     <p class="centre">The author of this page is Hannah.</p><br>
 
-    <table>
+    <table id="centre_table">
         <tr>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Pros</th>
-            <th>Cons</th>
+            <th style="border: 1px solid;">Name</th>
+            <th style="border: 1px solid;">Description</th>
+            <th style="border: 1px solid;">Pros</th>
+            <th style="border: 1px solid;">Cons</th>
+        </tr> 
+        <tr>
+            <td style="border: 1px solid;">Symmetric Encryption</td>
+            <td style="border: 1px solid;">The same key is used to both encrypt and decrypt</td>
+            <td style="border: 1px solid;">It is easier to set up</td>
+            <td style="border: 1px solid;">Far less secure</td>
         </tr>
         <tr>
-            <td>Symmetric Encryption</td>
-            <td>The same key is used to both encrypt and decrypt</td>
-            <td>It is easier to set up</td>
-            <td>Far less secure</td>
+            <td style="border: 1px solid;">Asymmetric Encryption</td>
+            <td style="border: 1px solid;">A private key is used held by the receiever to decrypt and there is a separate public key used to encrypt</td>
+            <td style="border: 1px solid;">More secure and can be used for digital signatures</td>
+            <td style="border: 1px solid;">More difficult to implement</td>
         </tr>
-        <tr>
-            <td>Asymmetric Encryption</td>
-            <td>A private key is used held by the receiever to decrypt and there is a separate public key used to encrypt</td>
-            <td>More secure and can be used for digital signatures</td>
-            <td>More difficult to implement</td>
-        </tr>
-    </table>
-    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true" class="centre"><br><br>
+    </table> <br><br>
+    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true" id="centre_photo"><br><br>
     <p>Medical:</p>
     <a href="Medical.html">Click Here!</a><br><br><br><br>
     <p>Jobs in Computing:</p>
