--- a/Medical.html
+++ b/Medical.html
@@ -10,15 +10,16 @@
   <style>
   </style>
   <body>
-
+    <div class="centre">
     <h1>Uses of Computing in the Medical Field</h1>
     <p>The author of this page is Eila</p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <h3>There are many uses for computers in the medical field</h3>
     <div class="container">
         <div class="img2">
-            <img src="https://miro.medium.com/v2/resize:fit:1400/1*Uk-v6ex--tMYiVf9ZNeBpA.jpeg"width="300" 
-            /><br><br>
+            <img src="https://miro.medium.com/v2/resize:fit:1400/1*Uk-v6ex--tMYiVf9ZNeBpA.jpeg"
+        ><br><br>
         </div>
         <div class="text">
           <h5>Virtual reality can be used for 3D visualisation of the human body</h5>
