--- a/Computing_page.html
+++ b/Computing_page.html
@@ -7,14 +7,13 @@
     <title>Bootstrap demo</title>
   </head>
   <body>
-    <h1>How can Computer Science help society?</h1>
-    <h2>Social</h2>
-    <h2>Economy</h2>
-    <h3>Environmental</h3>
-    <p>The Author of this page is Lily</p>
-    <p>Encryption page:</p>
-    <a href="encryption.html">Click Here!</a><br><br><br><br>
-    <p>Medical:</p>
-    <a href="Medical.html">Click Here!</a><br><br><br><br>
+    <h1>How can we use Computer Science to help society?</h1>
+    <h2><b>Game devs</b></h2>
+    <p>Game devs are responsible for coming up with cool games that not only help people to have fun after a long, busy day, but also provides ways for people to develop better mental health and cope with the daily stresses of life. According to the <a href https://www.webmd.com/mental-health/mental-health-benefits-of-video-games"> webmd website</a>, video games can help those dealing with past trauma.</p>
+    <img src="https://img.freepik.com/free-vector/people-with-gaming-icons-illustration_53876-43138.jpg?t=st=1731075977~exp=1731079577~hmac=9b949c25996f7af4bb3f504067300e6f64c464dd2dcd1efd154561b24bfd31f7&w=900" width = "50" />
+    <h2><b>Software developers</b></h2>
+    <p>Software developers can work in a wide range of different fields to create cool software that helps companies, businesses, and even save lives!</p>
+    <p><s>The Author of this page is Lily</s></p>
+
   </body>
 </html>
