--- a/Medical.html
+++ b/Medical.html
@@ -18,13 +18,15 @@
     <h4>There are many uses for computers in the medical field</h4>
   </div>
     <div class="container">
-        <div class="img2">
-            <img src="https://miro.medium.com/v2/resize:fit:1400/1*Uk-v6ex--tMYiVf9ZNeBpA.jpeg"
+        <div class="imgEila">
+            <img src="https://miro.medium.com/v2/resize:fit:1400/1*Uk-v6ex--tMYiVf9ZNeBpA.jpeg"width=300px; border-radius=25px;
         /><br><br>
         </div>
         <div class="text">
           <p>Virtual reality can be used for 3D visualisation of the human body</h5>
-          <p>Doctors can view the body and learn in a "hands on" way</p>
+          <p>Doctors can view the body and learn in a "hands on" way.</p>
+          <p>This can help reduce the time it takes to diagnose patients and</p>
+          <p>can give the doctor more information, faster.</p>
         </div>
       </div>
     <p></p>
