updated photo hannah

--- a/encryption.html
+++ b/encryption.html
@@ -37,7 +37,7 @@
             <td style="border: 1px solid;">More difficult to implement</td>
         </tr>
     </table> <br><br>
-    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true" id="centre_photo"><br><br>
+    <img src="https://github.com/code2867/progblackgroup/blob/main/encryption_pic.jpeg?raw=true" id="centre_photo"  class="imgHannah"><br><br>
     <p>Medical:</p>
     <a href="Medical.html">Click Here!</a><br><br><br><br>
     <p>Jobs in Computing:</p>
