Added a table of pros and cons

--- a/Computing_page.html
+++ b/Computing_page.html
@@ -9,11 +9,33 @@
   <body>
     <h1>How can we use Computer Science to help society?</h1>
     <h2><b>Game devs</b></h2>
-    <p>Game devs are responsible for coming up with cool games that not only help people to have fun after a long, busy day, but also provides ways for people to develop better mental health and cope with the daily stresses of life. According to the <a href https://www.webmd.com/mental-health/mental-health-benefits-of-video-games"> webmd website</a>, video games can help those dealing with past trauma.</p>
+    <p>Game devs are responsible for coming up with cool games that not only help people to have fun after a long, busy day, but also provides ways for people to develop better mental health and cope with the daily stresses of life. According to the webmd website, video games can help those dealing with past trauma.</p>
+    <a href https://www.webmd.com/mental-health/mental-health-benefits-of-video-games">Check out the webmd website!</a>
     <img src="https://img.freepik.com/free-vector/people-with-gaming-icons-illustration_53876-43138.jpg?t=st=1731075977~exp=1731079577~hmac=9b949c25996f7af4bb3f504067300e6f64c464dd2dcd1efd154561b24bfd31f7&w=900" width = "50" />
     <h2><b>Software developers</b></h2>
-    <p>Software developers can work in a wide range of different fields to create cool software that helps companies, businesses, and even save lives!</p>
-    <p><s>The Author of this page is Lily</s></p>
+    <p>Software developers can work in a wide range of different fields to create cool software that helps companies, businesses, and can even save lives!</p>
+    <p>Here are some pros and cons of the different sectors software developers can work in:</p>
+    <table>
+      <tr>
+      <th><b>Sector</b></th>
+      <th>Healthcare</th>
+      <th>Finance</th>
+      <th>Entertainment</th>
+      </tr>
+      <tr>
+      <td><b>Pros</b></td>
+      <td>Creating software that can help diagnose tumours much earlier than doctors can</td>
+      <td>They can help companies to process lots of volumes of applications</td>
+      <td>There are many different stages of development to get involved with: e.g. design, storyline, programming</td>
+      </tr>
+      <tr>
+      <td><b>Cons</b></td>
+      <td>Some of the software produced can lead to ethical issues, for instance, deciding which patients in a busy ward should be prioritised in terms of receiving treatment</td>
+      <td>Errors in the software could lead to potential miscarriages of justice, just like in the Post Office scandal!</td>
+      <td>Game devs can sometimes work unconventional hours, sometimes in the evenings and on weekends in order to meet client deadlines</td>
+      </tr>
+      </table>
+    <p>The Author of this page is Lily</p>
 
   </body>
 </html>
