added lillys links

--- a/Computing_page.html
+++ b/Computing_page.html
@@ -36,6 +36,9 @@
       </tr>
       </table>
     <p>The Author of this page is Lily</p>
-
+    <p>Medical:</p>
+    <a href="Medical.html">Click Here!</a><br><br><br><br>
+    <p>Encryption:</p>
+    <a href="encryption.html">Click Here!</a><br><br><br><br>
   </body>
 </html>
